Various changes as a result of testing
Change-Id: I70bae1b02d89d0f5f474bbdec96e4e5bcdc0225e

--- a/resources/ext.translatesvg.css
+++ b/resources/ext.translatesvg.css
@@ -36,11 +36,12 @@ img.infoimage {
     margin: 1em 0;
 	clear: both;
     padding: 0 1em 1em;
+	overflow: auto;
 }
 
 #translatesvg-warning p {
 	/* Arbitary formatting */
-	margin-top:17px;
+	margin-top:23px;
 }
 
 img.warnimage {
